# timesheetbot-agent

./: .dockerignore  .gitignore  Dockerfile  build_macos.sh  build_macos_timesheet_only.sh  dev-installer.sh  pyproject.toml  readme.txt  tsbot.spec  user-install.sh  user-uninstall.sh
timesheetbot_agent/: __init__.py  cli.py  config_loader.py  emailer.py  engine.py  errors.py  features.py  fitnet.py  mailer.py  napta.py  ph_sg.py  registration.py  security.py  storage.py  styles.py  tsbot_entry.py  ui.py
timesheetbot_agent/config/: app_config.yaml  holidays_sg_2024_2029.json
timesheetbot_agent/generators/: govtech_excel.py
