[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timesheetbot-agent"
version = "0.1.0"
description = "Local CLI timesheet bot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "openpyxl>=3.1.2",
  "prompt_toolkit>=3.0.43",
  "pyyaml>=6.0.1",
  "rich>=13.7"
]

[project.scripts]
tsbot = "timesheetbot_agent.cli:main"

[tool.setuptools.packages.find]
include = ["timesheetbot_agent*"]
exclude = ["tests*", "examples*"]
