[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timesheetbot-agent"
version = "0.1.0"
description = "Local CLI timesheet bot"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "openpyxl>=3.1.2",
  "prompt-toolkit>=3.0.43",
  "pyyaml>=6.0.1",
  "rich>=13.7",

  # Napta automation
  "playwright>=1.40.0",
]

[project.optional-dependencies]
# Optional fallback for Napta SSO via browser cookies
napta-cookies = ["browser-cookie3>=0.19.1"]

[project.scripts]
tsbot = "timesheetbot_agent.cli:main"

[tool.setuptools.packages.find]
include = ["timesheetbot_agent*"]
exclude = ["tests*", "examples*"]

# Include YAML / JSON config files inside the package
[tool.setuptools.package-data]
timesheetbot_agent = [
  "config/*.yaml",
  "config/*.yml",
  "config/*.json",
]
